[gd_scene load_steps=13 format=2]

[ext_resource path="res://scripts/screen/stageselect.gd" type="Script" id=1]
[ext_resource path="res://graphics/bg/grid_back.png" type="Texture" id=2]
[ext_resource path="res://graphics/bg/grid_gradient.png" type="Texture" id=3]
[ext_resource path="res://graphics/ui/transition.png" type="Texture" id=4]
[ext_resource path="res://scenes/ui/menu/scroll_label.tscn" type="PackedScene" id=5]
[ext_resource path="res://scenes/ui/select/stage/portrait.tscn" type="PackedScene" id=6]
[ext_resource path="res://scenes/ui/select/stage/preview.tscn" type="PackedScene" id=7]
[ext_resource path="res://scenes/ui/menu/popup/yesno.tscn" type="PackedScene" id=8]
[ext_resource path="res://resources/font/pixel_intv.tres" type="DynamicFont" id=9]

[sub_resource type="Shader" id=1]
code = "shader_type canvas_item;

void fragment() {
	vec4 tex = texture(TEXTURE, UV);
	tex.a = 1.0 - UV.x;
	COLOR = tex;
}"

[sub_resource type="ShaderMaterial" id=2]
shader = SubResource( 1 )

[sub_resource type="Animation" id=3]
resource_name = "start"
length = 0.5
step = 0.01
tracks/0/type = "value"
tracks/0/path = NodePath("bg_back:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.01, 0.02, 0.03, 0.04, 0.05, 0.07, 0.09, 0.11, 0.13, 0.15, 0.18, 0.21, 0.25, 0.3, 0.37, 0.47 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12, 13, 14, 15, 16 ]
}

[node name="stageselect" type="Node2D"]
script = ExtResource( 1 )
__meta__ = {
"_edit_lock_": true
}

[node name="Camera2D" type="Camera2D" parent="."]
current = true
__meta__ = {
"_edit_lock_": true
}

[node name="bg_back" type="Sprite" parent="."]
z_index = -4000
texture = ExtResource( 2 )
hframes = 17
frame = 15
__meta__ = {
"_edit_lock_": true
}

[node name="bg_grid" type="Sprite" parent="."]
modulate = Color( 0.854902, 0.156863, 1, 1 )
material = SubResource( 2 )
position = Vector2( -88, 0 )
z_index = -4000
texture = ExtResource( 3 )

[node name="bg_grid2" type="Sprite" parent="."]
modulate = Color( 0.156863, 0.960784, 1, 1 )
material = SubResource( 2 )
position = Vector2( 88, 0 )
rotation = -3.14159
scale = Vector2( 1, -1 )
z_index = -4000
texture = ExtResource( 3 )

[node name="transition" type="Sprite" parent="."]
visible = false
z_index = 2000
texture = ExtResource( 4 )
__meta__ = {
"_edit_lock_": true
}

[node name="labels" type="Node2D" parent="."]
modulate = Color( 1, 1, 1, 0.501961 )

[node name="label_select" parent="labels" instance=ExtResource( 5 )]
margin_left = -128.0
margin_right = -46.0
text = "SELECT STAGE"
left_border = -221
right_border = 151

[node name="label_select2" parent="labels" instance=ExtResource( 5 )]
margin_left = -35.0
margin_right = 47.0
text = "SELECT STAGE"
left_border = -221
right_border = 151

[node name="label_select3" parent="labels" instance=ExtResource( 5 )]
margin_left = 58.0
margin_right = 140.0
text = "SELECT STAGE"
left_border = -221
right_border = 151

[node name="label_select4" parent="labels" instance=ExtResource( 5 )]
margin_left = -221.0
margin_right = -139.0
text = "SELECT STAGE"
left_border = -221
right_border = 151

[node name="label_select5" parent="labels" instance=ExtResource( 5 )]
margin_left = -128.0
margin_top = 63.0
margin_right = -46.0
margin_bottom = 77.0
text = "SELECT STAGE"
move = Vector2( -1, 0 )
left_border = -221
right_border = 151

[node name="label_select6" parent="labels" instance=ExtResource( 5 )]
margin_left = -35.0
margin_top = 63.0
margin_right = 47.0
margin_bottom = 77.0
text = "SELECT STAGE"
move = Vector2( -1, 0 )
left_border = -221
right_border = 151

[node name="label_select7" parent="labels" instance=ExtResource( 5 )]
margin_left = 58.0
margin_top = 63.0
margin_right = 140.0
margin_bottom = 77.0
text = "SELECT STAGE"
move = Vector2( -1, 0 )
left_border = -221
right_border = 151

[node name="label_select8" parent="labels" instance=ExtResource( 5 )]
margin_left = -221.0
margin_top = 63.0
margin_right = -139.0
margin_bottom = 77.0
text = "SELECT STAGE"
move = Vector2( -1, 0 )
left_border = -221
right_border = 151

[node name="online_labels" type="Node2D" parent="."]

[node name="label_timer" type="Label" parent="online_labels"]
margin_left = -80.0
margin_top = -64.0
margin_right = -48.0
margin_bottom = -48.0
custom_fonts/font = ExtResource( 9 )
custom_colors/font_color_shadow = Color( 0.72549, 0.313726, 0.588235, 1 )
text = "15"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="sportraits" type="Node2D" parent="."]
__meta__ = {
"_edit_lock_": true
}

[node name="sportrait_dojo" parent="sportraits" instance=ExtResource( 6 )]
position = Vector2( 24, -50 )

[node name="sportrait_rooftop" parent="sportraits" instance=ExtResource( 6 )]
position = Vector2( 87, -50 )
stage = 1

[node name="sportrait_lab" parent="sportraits" instance=ExtResource( 6 )]
position = Vector2( 24, -25 )
stage = 2

[node name="sportrait_company" parent="sportraits" instance=ExtResource( 6 )]
position = Vector2( 87, -25 )
stage = 3

[node name="sportrait_bridge" parent="sportraits" instance=ExtResource( 6 )]
position = Vector2( 24, 0 )
stage = 4

[node name="sportrait_factory" parent="sportraits" instance=ExtResource( 6 )]
position = Vector2( 87, 0 )
stage = 5

[node name="sportrait_sanctuary" parent="sportraits" instance=ExtResource( 6 )]
position = Vector2( 24, 25 )
stage = 6

[node name="sportrait_blackhole" parent="sportraits" instance=ExtResource( 6 )]
position = Vector2( 87, 25 )
stage = 7

[node name="sportrait_random" parent="sportraits" instance=ExtResource( 6 )]
position = Vector2( 55, 50 )
stage = 9

[node name="online_timer" type="Timer" parent="."]
wait_time = 15.0
one_shot = true

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
volume_db = -5.0

[node name="preview_stage" parent="." instance=ExtResource( 7 )]
position = Vector2( -67, -9 )

[node name="menu_yesno" parent="." instance=ExtResource( 8 )]
visible = false
z_index = 4000

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
autoplay = "start"
anims/start = SubResource( 3 )
[connection signal="timeout" from="online_timer" to="." method="_on_online_timer_timeout"]
